--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
+
+
+
 {
     "name": "note-taker",
     "version": "1.0.0",
@@ -10,6 +13,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.16.4"
+      "express": "^4.16.3",
+      "nodemon": "^2.0.15",
+      "uuid": "^8.3.2"
     }
   }
