--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 
 
 {
-    "name": "note-taker",
+    "name": "notetaker15223",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
+    "node" : "16.14.0",
     "scripts": {
       "start": "node server.js",
       "test": "echo \"Error: no test specified\" && exit 1"
